<resources>
    <string name="app_name">CatchTheHit</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="menu_field">Tablero</string>
    <string name="menu_player">Tu jugador</string>
    <string name="menu_team">Equipo</string>
    <string name="menu_howto">Como jugar</string>
    <dimen name="icon_width">150dp</dimen>
    <dimen name="icon_heigth">150dp</dimen>
    <dimen name="name_width">150dp</dimen>
    <dimen name="name_heigth">50dp</dimen>
    <dimen name="players_10">10dp</dimen>
    <dimen name="players_20">20dp</dimen>
    <dimen name="center_icon">10dp</dimen>
    <string name="resumen_ronda_titulo">Final de la ronda</string>
    <string name="resumen_ronda_tu_equipo_puntos">puntos</string>
    <string name="resumen_ronda_equipo_rival_puntos">puntos</string>
    <string name="siguiente_ronda_button">Siguiente ronda</string>
    <string name="boton_empezar">Empezar juego</string>
    <string name="botonComoJugar"> ¿Cómo jugar? </string>
    <string name="botonDemoJuego"> Demo Minijuego </string>
    <string name="boton_1">1 ronda \n(demo)</string>
    <string name="boton_2">2 rondas</string>
    <string name="boton_3">3 rondas</string>
    <string name="boton_4">4 rondas</string>
    <string name="boton_5">5 rondas</string>
    <string name="evento_special">Evento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tuto1">¿Cómo jugar Catch The Hit?</string>
    <string name="tuto2">Bienvenido al tutorial de Catch The Hit!\n Antes de empezar aquí tienes un
        video en el que podrás ver las características principales del baseball.</string>
    <string name="tuto3">1. Creación de sala\n\nPara empezar una partida necesitarás crear una sala,para ello deja el campo código de sala de la pestaña principal vacío y dale a empezar partida.\n\nA continuación, selecciona el número de rondas que deseas jugar (Con más rondas el juego durará más y habrá más test con menos preguntas).\n\nAhora verás a tu jugador (Recuerda el color) y el código de sala que deberás dar a tus compañeros.</string>

    <string name="tuto4">2. Unirse a una sala\n\nSi quieres unirte a una sala, deberás introducir el código obtenido por el creador de la sala, introducirlo en el campo &quot;código de sala&quot; y tocar en &quot;Empezar Juego&quot;.\n\nSi la sala existe entrarás a la sala de espera donde verás cual es tu jugador.</string>

    <string name="tuto5">3. Modo ataque\n\nUna vez comienze la partida los jugadores os ireis turnando para batear (Minijuego) y a continuación el bateador podrá moverse entre 1 y 3 bases dependiendo de como lo haya hecho al batear.\n\nA la hora de avanzar hay que tener en cuenta que solo puede haber más de un jugador en la primera base, si acabas en una base con otro jugador, estarás eliminado durante esta ronda.\n\nTambién tendrás que tener en cuenta que cuanto más avances, más posibilidades tienes de que los defensores cojan la bola y te eliminen durante esta ronda. El modo ataque terminará cuando el equipo consiga 3 vueltas o acumule 3 eliminaciones.</string>

    <string name="tuto6">4. Vista de equipo\n\nDesde el Modo ataque se puede ver al resto de jugadores del equipo, asi como sus estadísticas y las estadísticas de tu jugador.</string>

    <string name="tuto7">5. Modo defensa\n\nUna vez termine la mitad de ataque, se cambia a la mitad de defensa. En esta fase todos los miembros del equipo deberéis decidir que jugadores colocaréis en cada posición.\n\nSolo uno de los jugadores podrá colocar a los jugadores en las posiciones, el resto del equipo tendrá acceso a la lista de los personajes y podrán además ver sus estadisticas</string>

    <string name="tuto8">6. Test\n\nAl terminar la ronda de defensa se realizará un test para evaluar a tus compañeros y cuyo numero de preguntas dependerá del número de rondas seleccionadas al principio del juego. Para poder finalizar el test es necesario que todos los jugadores hayan respondido a todas las preguntas</string>

    <string name="tuto9">7. Resultados\n\nDespues del test, los jugadores irán a la vista de resultados, donde se verá la puntuación obtenida en la ronda. En caso de tratarse de la ultima ronda, el resultado será el de la partida y el de los test.</string>
    <string name="energia">\"- \"</string>

</resources>