<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_inicio"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="CATCH THE HIT"
        android:textColor="@color/white"
        android:textSize="50dp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:backgroundTint="#85FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:text="Elige el número de rondas a jugar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35dp" />

    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="#73bbee"
        android:onClick="clickBoton1"
        android:text="@string/boton_1" />

    <Button
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#73bbee"
        android:onClick="clickBoton2"
        android:text="@string/boton_2" />

    <Button
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#73bbee"
        android:onClick="clickBoton3"
        android:text="@string/boton_3" />

    <Button

        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"s
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#73bbee"
        android:onClick="clickBoton4"
        android:text="@string/boton_4" />

    <Button
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#73bbee"
        android:onClick="clickBoton5"
        android:text="@string/boton_5" />


</LinearLayout>


