<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.uva.inf.smov.catchthehit.ResumenRonda">

    <ImageView
        android:id="@+id/campo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/field" />

    <TextView
        android:id="@+id/resumen_ronda_titulo"
        android:layout_width="315dp"
        android:layout_height="86dp"
        android:layout_marginTop="60dp"
        android:text="@string/resumen_ronda_titulo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumen_ronda_equipo_rival_puntos"
        android:layout_width="347dp"
        android:layout_height="76dp"
        android:text="@string/resumen_ronda_equipo_rival_puntos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resumen_ronda_tu_equipo_puntos"
        android:layout_width="353dp"
        android:layout_height="85dp"
        android:text="@string/resumen_ronda_tu_equipo_puntos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/resumen_ronda_equipo_rival_puntos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumen_ronda_titulo" />

    <Button
        android:id="@+id/resumen_ronda_siguiente_button"
        android:layout_width="198dp"
        android:layout_height="80dp"
        android:text="@string/siguiente_ronda_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumen_ronda_equipo_rival_puntos" />
</androidx.constraintlayout.widget.ConstraintLayout>